# swiss-uhi-lcd

./: .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml
notebooks/: agreement-metrics.ipynb  apply-bias-correction.ipynb  bias-correction.ipynb  get-aws-data.ipynb  get-bern-lcd-data.ipynb  get-lcd-data.ipynb  get-spatial-extent.ipynb  get-zurich-awel-data.ipynb  get-zurich-lcd-data.ipynb  heat-indices.ipynb  heat-warning-eval.ipynb  multivariate-bias.ipynb  radiative-bias.ipynb  train-bias-correction.ipynb
swiss_lcd_heatwaves/: __init__.py  heat_warnings.py  plot_utils.py  regr_utils.py
swiss_uhi_lcd/: __init__.py  heat_warnings.py  plot_utils.py  regr_utils.py  stats_utils.py
