[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "swiss-lcd-heatwaves"
version = "0.1.0"
description = "Revisiting urban heat warnings in Switzerland using low-cost measurement networks"
authors = [{name = "Martí Bosch", email = "marti.bosch@epfl.ch"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = ["urban-footprinter>=0.4.0,<0.5"]

[project.urls]
repository = "https://github.com/martibosch/swiss-lcd-heatwaves"

[tool.codespell]
ignore-words-list = "convencional,pres,ser,temperatur"
skip = "CHANGELOG.md,pixi.lock,notebooks/*.ipynb"

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.pixi.dependencies]
ipykernel = ">=7.1.0,<8"
pre-commit = ">=4.4.0,<5"
python = "3.12.*"
snakemake = ">=9.13.7,<10"
pandas = ">=2.3.3,<3"
seaborn = ">=0.13.2,<0.14"
# meteora = ">=0.8.0,<0.9"
pyproj = ">=3.7.2,<4"
osmnx = ">=2.0.6,<3"
pyogrio = ">=0.11.0,<0.12"
scikit-learn = ">=1.7.2,<2"
statsmodels = ">=0.14.5,<0.15"
clustergram = ">=0.8.1,<0.9"
pystac-client = ">=0.9.0,<0.10"
contextily = ">=1.7.0,<2"
papermill = ">=2.6.0,<3"
pixi-kernel = ">=0.7.1,<0.8"
swisslandstats-geopy = ">=0.12.0,<0.13"
xvec = ">=0.5.2,<0.6"
sktime = ">=0.40.1,<0.41"
skops = ">=0.13.0,<0.14"
matplotlib = ">=3.10.8,<4"
netcdf4 = ">=1.7.3,<2"

[tool.pixi.pypi-dependencies]
swiss_lcd_heatwaves = {path = ".", editable = true}
meteora = {path = "../../libraries/meteora", editable = true}

[tool.pixi.workspace]
authors = ["Martí Bosch marti.bosch@epfl.ch>"]
channels = ["conda-forge", "bioconda"]
name = "swiss-lcd-heatwaves"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["swiss_lcd_heatwaves"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "swiss_lcd_heatwaves"
module-root = ""
